dataverse-webapp/src/main/webapp/resources/vecler/theme-base.scss
/* ... */
// FIXME: This adresses issue with too wide autocomplete suggestion
// only for widescreen viewport
.ui-autocomplete-panel.autocomplete-panel-maxwidth {
    max-width: 800px;
}

.ui-autocomplete-emptyMessage {
	border-radius: 9px;
}

.ui-autocomplete-panel.ui-widget-content.ui-corner-all.ui-helper-hidden.ui-shadow.ui-input-overlay.DropdownPopupPanel {
	height: 12em !important;
}

/* Buttons */

.button-block {
	button, a {
		padding: 6px 12px;
		color: $link-color;

		span.ui-button-text {
			line-height: 1.42857143;
			padding: 0;
		}
	}
}

.input-group-btn {
	font-size: 1em;

	> .btn {
		font-size: 1em;
	}
}

button.btn-default.ui-button-text-only .ui-button-text {
	font-size: 1em;
}

/* Tabs */

.ui-tabs {
	/* Fix modal issues on the new PrimeFaces version 8.0 */
	-moz-transform: none;
	-o-transform: none;
	-webkit-transform: none;
	transform: none;

	&.ui-tabs-top > .ui-tabs-nav {
		padding: 0.2em 0 0 0;
	}

	.ui-tabs-nav {
		&.ui-widget-header li a {
			line-height: 1.2em;
			padding: 10px 1.5em 7px 1.5em;
		}

		li.ui-tabs-selected a {
			cursor: default;
		}
	}

	.ui-tabs-panel {
		padding: 1em 0;
	}
}

div[id$="notifications"].ui-tabs-panel {
	div.notification-item:last-child div.notification-item-cell {
		border-bottom: none;
	}

	div.notification-item-cell {
		padding: 0.8em;

		.text-icon-inline {
			position: relative;
			top: 0.2em;
		}
	}
}

/* Tables */

.visuallyhidden {
	position: absolute;
	overflow: hidden;
	clip: rect(0 0 0 0);
	height: 1px; width: 1px;
	margin: -1px; padding: 0; border: 0;
}

.ui-datatable th:not(.ui-sortable-column) {
	cursor: default;
}

.ui-datatable.ui-widget, .ui-autocomplete-panel {
	.ui-widget-header {
		background: none;
	}

	&:not(.headerless-table) > div > table > tbody > tr td {
		border-top: none;
	}

	&.headerless-table > div > table > tbody > tr:first-child td {
		@include rounded-table-top;
	}

	table, .ui-autocomplete-table {
		border-collapse: separate;
		color: $main-text-color;

		thead {
			word-break: break-all;

			th, th.ui-state-default {
				padding: 14px 20px;
				border-color: $gray-border-color;
				border-radius: 0;
				background-image: none;
				background-color: $search-result-desc-color;
				text-align: left;
				white-space: nowrap;

				@include rounded-table-top;

				> span {
					display: inline-block;
				}

				.ui-column-title {
					white-space: break-spaces;
					word-wrap: break-word;
					word-break: break-word;
					hyphens: auto;
				}

				& + th {
					border-left: none;
				}

				.ui-chkbox-box::before, .ui-chkbox-icon::before {
					background: $search-result-desc-color;
				}
			}
		}

		thead#datasetForm\:tabView\:filesTable_head,
		thead#datasetForm\:filesTable_head  {
			tr {
				background: none;
			}

			th, th.ui-state-default {
				text-align: right;
			}
		}

		tr {
			td {
				border-color: $gray-border-color;

				& + td {
					border-left: none;
				}

				&:only-child {
					border-left: 1px solid $gray-border-color;
					border-right: 1px solid $gray-border-color;
				}
			}

			+ tr td {
				border-top: none;
			}

			&:last-child {
				td {
					&:first-child {
						border-radius: 0 0 0 $border-radius;
					}
					&:last-child {
						border-radius: 0 0 $border-radius 0;
					}
					&:only-child{
						border-radius: 0 0 $border-radius $border-radius;
					}
				}
			}
		}
	}

	&:not(.no-alternating-row-colors) .ui-datatable-odd:not(.ui-state-highlight):not(:hover) {
		background: none;

		 td {
			background: $search-result-desc-color;

			.ui-chkbox-box::before, .ui-chkbox-icon::before {
				background: $search-result-desc-color;
			}
		}
	}

	tr, tr.ui-datatable-odd {
		&:hover td {
			background: $table-row-hover;

			.ui-chkbox-box::before, .ui-chkbox-icon::before {
				background: $table-row-hover;
			}
		}
	}

	.ui-selection-column {
		border-right: none;
	}

	.text-muted {
		color: $main-text-color;
	}

	.col-xs-12.bg-warning {
		margin-bottom: 1em;
		border-radius: $border-radius;
	}
}

tr.ui-state-highlight, .ui-widget-content tr.ui-state-highlight, .ui-widget-header tr.ui-state-highlight {
	&, &.ui-datatable-odd {
		td {
			background: $table-row-highlight;

			a {
				color: $link-color;
			}

			.ui-chkbox-box::before, .ui-chkbox-icon::before {
				background: $table-row-highlight;
			}
		}
	}
}

tr.ui-state-hover, .ui-widget-content tr.ui-state-hover {
	background: none;
	color: $main-text-color;
}

div[id$="versionsTable"] {
	th, td {
		&:not(:last-child) {
			border-right: none;
		}
	}
}

tr.ui-state-highlight a:not(.btn), .ui-widget-content tr.ui-state-highlight a:not(.btn) {
	@include link-color;
}

.ui-datatable-tablewrapper {
	.col-manage-action .button-block div.btn-group {
		margin: 0 5px 0 1px;
	}

	.change-order-buttons-cell a.btn.btn-default + a.btn.btn-default {
		margin-left: 0.3em;
	}
}

/* Scrollable tables */

/* This selector is also present in dv_rebind_bootstrap.js */
.ui-datatable:not(.headerless-table):not(.no-min-width) {
	table {
		min-width: 65em;
	}
	&.medium-min-width table {
		min-width: 40em;
	}
}

div.manageTable,
div.filesTable {
	&.ui-datatable.ui-widget div.ui-datatable-tablewrapper {
		overflow-x: auto;
	}
}

/* Fix submenus in scrollable tables not overflowing outside */
.ui-tabs {
	position: static;
}

.panel-default > .panel-heading {
	border-radius: $border-radius $border-radius 0 0;
	display: block;
	padding: 16px 20px 14px 20px;
	border-bottom: 1px solid $gray-border-color;
	background: $search-result-desc-color;

	&.text-info[data-toggle="collapse"] {
		color: $link-color;
	}

	.glyphicon {
		top: 3px;
		left: 7px;
		color: $icon-color;
	}

	.ui-chkbox-box::before, .ui-chkbox-icon::before {
		background: $search-result-desc-color;
	}
}

.table-striped > tbody > tr:nth-of-type(2n+1) {
	background: #fff;
}
.table-striped > tbody > tr:hover {
	background: $table-row-hover;

	.ui-chkbox-box::before, .ui-chkbox-icon::before {
		background: $table-row-hover;
	}
}
/* ... */

